CSS Foundations & Folder Tree
Learned about

CSS Methods
Class ID Selectors
Grouping Selectors
Chaining Selectors
Descendant Combinator
Cascade Fix
Margin & Padding

Reorderer Folders Tree For Better Navigation

--- a/websites/recipes/index.html
+++ b/websites/recipes/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Recipes</h1>
     <ul>
-        <li><a href="lasagna.html">Easy Lasagna</a></li>
-        <li><a href="cheesybread.html">Quick and Easy Cheesy Bread</a></li>
-        <li><a href="chicken.html">Easy Honey-Mustard Chicken and Potato Bake</a></li>
+        <li><a href="./pages/lasagna.html">Easy Lasagna</a></li>
+        <li><a href="./pages/cheesybread.html">Quick and Easy Cheesy Bread</a></li>
+        <li><a href="./pages/chicken.html">Easy Honey-Mustard Chicken and Potato Bake</a></li>
     </ul>
 </body>
 </html>
