--- a/websites/recipes/pages/chicken.html
+++ b/websites/recipes/pages/chicken.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheesy Bread</title>
+    <title>Easy Honey-Mustard Chicken and Potato Bake</title>
 </head>
 <body>
     <h1>Easy Honey-Mustard Chicken and Potato Bake</h1>
-        <img src="./img/chicken.jpg">
+        <img src="./img/chicken.jpg" width="500" height="400">>
     <h3>Description</h3>
-        <p>This easy bread is excellent with anything from meatloaf, to soups, to chicken. Tastes wonderful, but is pretty crumbly.</p>
+        <p>This easy-to-prepare and delicious meal is both sweet and savory, with a hint of honey and mustard combining chicken thighs and potatoes.</p>
     <h3>Ingredients</h3>
         <ul>
             <li>1 cup chicken broth</li>
@@ -33,5 +33,6 @@
             <li>Transfer chicken to the prepared baking dish. Cover chicken with potatoes and pour remaining liquid on top.</li>
             <li>Bake in the preheated oven until potatoes are golden brown and chicken is no longer pink at the bone and juices run clear, about 50 minutes.</li>
         </ol>
+    <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
