--- a/websites/recipes/pages/cheesybread.html
+++ b/websites/recipes/pages/cheesybread.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Quick and Easy Cheesy Bread</h1>
-        <img src="./img/cheesybread.jpg">
+        <img src="./img/cheesybread.jpg" width="500" height="400">
     <h3>Description</h3>
         <p>This easy bread is excellent with anything from meatloaf, to soups, to chicken. Tastes wonderful, but is pretty crumbly.</p>
     <h3>Ingredients</h3>
@@ -28,5 +28,6 @@
             <li>In a large bowl, mix together flour, sugar, baking powder, salt and cheese. In another large bowl, beat together egg, milk and oil. Stir the flour/cheese mixture into the egg mixture, stirring until just moistened. Pour batter into prepared pan.</li>
             <li>Bake in preheated oven for 35 minutes, until a toothpick inserted into center of loaf comes out clean.</li>
         </ol>
+    <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
