--- a/websites/recipes/pages/lasagna.html
+++ b/websites/recipes/pages/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Easy Lasagna</h1>
-        <img src="./img/lasagna.jpg">
+        <img src="./img/lasagna.jpg" width="500" height="400">>
     <h3>Description</h3>
         <p>An easy lasagna recipe that saves me lots of time. This recipe is simple and satisfies everyone in the family. Try it tonight!</p>
     <h3>Ingredients</h3>
@@ -33,5 +33,6 @@
             <li>Spread 3/4 cup of sauce in a 9x13-inch baking dish. Cover with 3 uncooked lasagna noodles, 1 3/4 cups of cheese mixture, and 1/4 cup sauce; repeat layers once more. Top with remaining 3 noodles, sauce, mozzarella, and Parmesan cheese. Add 1/2 cup water along the edges of the dish. Cover tightly with aluminum foil.</li>
             <li>Bake in the preheated oven for 45 minutes. Uncover and bake for an additional 10 minutes. Let stand 10 minutes before serving.</li>
         </ol>
+    <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
